# RAMSCRIBE

./: .gitignore  Makefile  README.md  pyproject.toml
ramscribe/: __init__.py  __main__.py  capture.py  config.py  ring.py  sink.py  stt.py  ui.py
scripts/: audit_boundary.py
tests/: test_no_audio_persistence.py
