[project]
name = "ramscribe"
version = "0.1.0"
description = "RAM-only live transcriber — audio never touches disk, only the transcript does."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
    "sounddevice>=0.4.6",
    "faster-whisper>=1.0.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
ramscribe = "ramscribe.__main__:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ramscribe"]

[tool.pytest.ini_options]
testpaths = ["tests"]
